home page arrows fix

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -2,6 +2,7 @@
   --primary: #f8b195;
   --secondary: #c06c84;
   --text-primary: #6c5b7b;
+  --text-primary-disabled: #6c5b7b28;
   --text-primary-hover: #4f4458;
   --text-secondary: #355c7d;
   --details: #f67280;
